dataset1235/2025-2/2947369575/users/4237658727/executions/1003782500_2667036473.log
== SUBMISSION (2025-08-27 22:48:50)
-- CODE: 
temp(=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:17)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:19)
-- CODE: 
tempC(=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:47:30)
-- CODE: 
temp(=float(input("temperatura em celsius"))
tempk=tempc+237.15
print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    temp(=float(input("temperatura em celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("temperatura em celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("temperatura em celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("temperatura em celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("temperatura em celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    temp(=float(input("temperatura em celsius"))
         ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:21)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:29)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:48:12)
-- CODE: 
temp(=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:46)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:54:51)
-- CODE: 
tempC=float(input("Temperatura em Celsius:"))
tempK=tempC+273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:55:08)
-- CODE: 
tempC=float(input("Temperatura em Celsius:"))
tempK=tempC+273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:19)
-- CODE: 
tempC(=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:48:13)
-- CODE: 
temp(=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    temp(=float(input("Temperatura em Celsius"))
         ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:49:48)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:29)
-- CODE: 
tempC=float(input("Temperatura em Celsius:"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:51:11)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:54:21)
-- CODE: 
tempC=float(input("Temperatura em Celsius:"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:267.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:51:12)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:17)
-- CODE: 
tempC(=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempC(=float(input("Temperatura em Celsius"))
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:49:56)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:53)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:15)
-- CODE: 
tempC=float(input("Temperatura em Celsius"))
tempK=tempC+237.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius257.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius227.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius197.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius337.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius237.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius267.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
